# drum

./: CMakeLists.txt  README.md
include/drum/: MainComponent.h  SequencerEngine.h  TransportClock.h
src/: Main.cpp  MainComponent.cpp  SequencerEngine.cpp  TransportClock.cpp
tests/: test_transport_and_sequencer.cpp
